--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /*--GENERAL--*/
-*{
-    background: whitesmoke;
-    margin: 0;
+body{
+    background: url("img/judogi.png")no-repeat center;
+    background-attachment: fixed;
     padding: 0;
+    margin: 0;
 }
 
 .clear{
@@ -11,53 +12,65 @@
 
 /*--HEADER--*/
 header{
+    display: flex;
+    justify-content: space-around;
     background: white;
     height: 15vh;
-    width: 100vw;
-    position: fixed;
-    padding: 0.5rem;
-    /*flex-flow: row wrap;*/
-    justify-content: center;
-    align-items: center;
-
-    border: solid black 1px;
+    min-height: 100px;
+    width: 100VW;
+    padding: 0.3em;
+    border: solid gray 2px;
 }
 
 header img{
-    display: block;
-    float: left;
     min-height: 5vh;
     max-height: 100px;
 }
 header h1{
+    text-align: center;
     font-style: italic;
-}
-header nav{
-    margin-right: 1rem;
+    text-decoration: underline;
 }
 
 header nav ul{
-    float: right;
     list-style: none;
+	display: inline-block;
+    text-decoration: none;
 }
+
 /*--MAIN--*/
 main{
-    margin: 2px;
-    padding: 2px;
-    padding-top: 18vh;
-    background-image: url("img/ifj_logo.png") no-repeat;
+    margin: 0;
+    padding: 0;
 }
 .article{
-    border: solid gray 3px;
+    border: solid rgb(43, 42, 42) 5px;
     border-radius: 0 5px 0 5px;
-    margin: 0.5em;
-    padding: 0.2em;
+    border-top: none;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 1em;
 }
 /*--FOOTER--*/
 footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border: solid steelblue 3px;
     width: 100vw;
     background: steelblue;
+}
+footer ul li{
+	display: inline-block;
+
+}
+footer img{
+    width: 25px;
+    height: auto;
+
 }
 
 /* MEDIA QUERRY*/
